# Sentiment-Analysis

./: README.md  makepyproject.py  pyproject.toml
chapters/: chapter_0.txt  chapter_1.txt  chapter_10.txt  chapter_11.txt  chapter_12.txt  chapter_13.txt  chapter_14.txt  chapter_15.txt  chapter_16.txt  chapter_2.txt  chapter_3.txt  chapter_4.txt  chapter_5.txt  chapter_6.txt  chapter_7.txt  chapter_8.txt  chapter_9.txt
data/: BoosterWordList.txt  EmotionLookupTable.txt  IronyTerms.txt  NegatingWordList.txt  QuestionWords.txt  SlangLookupTable.txt
sentiment_analysis/: __init__.py
