

    [build-system]
    requires = ["flit_core >=3.2,<4"]
    build-backend = "flit_core.buildapi"

    [project]
    name = "sentiment_analysis"
    authors = [
        {name = "Francisca Barros", email = "pg53816@uminho.pt"},
        {name = "Rafael Correia", email = "pg54162@uminho.pt"},
        {name = "Robert Szabo", email = "pg54194@uminho.pt"}
    ]
    version = "0.1.0"
    readme = "README.md"
    classifiers = [
        "License :: OSI Approved :: MIT License",
    ]
    requires-python = ">=3.8"
    dynamic = ["description"]

    dependencies = [
        "spacy"
    ]

    [project.scripts]
    sentiment_analysis = "sentiment_analysis:main"

    